--- a/cli/export_templates/html/index.html
+++ b/cli/export_templates/html/index.html
@@ -16,7 +16,7 @@
             margin-left: 25px;
             margin-right: 25px;
             height: 100%;
-            width: 400px;
+            aspect-ratio: 6 / 9;
             padding: 40px;
         }
     </style>
