--- a/cli/export_templates/html/index.html
+++ b/cli/export_templates/html/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>[title]</title>
+    <link rel="stylesheet" href="../css/standard.css">
     <style>
         .container {
             display: flex;
@@ -11,17 +12,18 @@
             height: 50vw;
             justify-content: center;
             align-items: center;
+            position: fixed;
         }
-        .page {
-            margin-left: 25px;
-            margin-right: 25px;
-            height: 100%;
-            aspect-ratio: 6 / 9;
-            padding: 40px;
+        button {
+            border: 0px;
+            background-color: transparent;
+        }
+        button:hover {
+            cursor: pointer;
         }
     </style>
     <script>
-        let pages = ['<div><h1>This is a demo page</h1><h2>Lorem ipsum</h2><p>Testing testing</p></div>', '<div><h1>This is an empty page</h1></div>'];
+        let pages = [pages];
         currentPage = 0;
         function nextPage() {
             currentPage++;
@@ -35,11 +37,13 @@
 </head>
 <body>
     <div class="container">
-        <button onclick="previousPage()">Previous</button>
-        <div id="page-content" class="page">
-            <div><h1>This is a demo page</h1><h2>Lorem ipsum</h2><p>Testing testing</p></div>
-        </div>
-        <button onclick="nextPage()">Next</button>
+        <button onclick="previousPage()">
+            <svg width="24px" height="24px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" color="#000000" stroke-width="1.5"><path fill-rule="evenodd" clip-rule="evenodd" d="M12 1.25C6.06294 1.25 1.25 6.06294 1.25 12C1.25 17.9371 6.06294 22.75 12 22.75C17.9371 22.75 22.75 17.9371 22.75 12C22.75 6.06294 17.9371 1.25 12 1.25ZM10.9697 16.0303L7.46967 12.5303C7.17678 12.2374 7.17678 11.7626 7.46967 11.4697L10.9697 7.96967C11.2626 7.67678 11.7374 7.67678 12.0303 7.96967C12.3232 8.26256 12.3232 8.73744 12.0303 9.03033L9.81066 11.25H16C16.4142 11.25 16.75 11.5858 16.75 12C16.75 12.4142 16.4142 12.75 16 12.75H9.81066L12.0303 14.9697C12.3232 15.2626 12.3232 15.7374 12.0303 16.0303C11.7374 16.3232 11.2626 16.3232 10.9697 16.0303Z" fill="#000000"></path></svg>
+        </button>
+        [current_page]
+        <button onclick="nextPage()">
+            <svg width="24px" height="24px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" color="#000000" stroke-width="1.5"><path fill-rule="evenodd" clip-rule="evenodd" d="M12 1.25C6.06294 1.25 1.25 6.06294 1.25 12C1.25 17.9371 6.06294 22.75 12 22.75C17.9371 22.75 22.75 17.9371 22.75 12C22.75 6.06294 17.9371 1.25 12 1.25ZM13.0303 7.96967L16.5303 11.4697C16.8232 11.7626 16.8232 12.2374 16.5303 12.5303L13.0303 16.0303C12.7374 16.3232 12.2626 16.3232 11.9697 16.0303C11.6768 15.7374 11.6768 15.2626 11.9697 14.9697L14.1893 12.75H8C7.58579 12.75 7.25 12.4142 7.25 12C7.25 11.5858 7.58579 11.25 8 11.25H14.1893L11.9697 9.03033C11.6768 8.73744 11.6768 8.26256 11.9697 7.96967C12.2626 7.67678 12.7374 7.67678 13.0303 7.96967Z" fill="#000000"></path></svg>
+        </button>
     </div>
 </body>
 </html>
