support video embeds

--- a/cli/export_templates/html/index.html
+++ b/cli/export_templates/html/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>[title]</title>
-    <link rel="stylesheet" href="../css/standard.css">
+    <link rel="stylesheet" href="[styles_path]">
     <style>
         .container {
             display: flex;
